# StonesAnalyzer

./: .board.rs.swp  .game.rs.swp  .gitignore  4x2_backup.san  Cargo.toml  Makefile  README.md  board.rs  compare  engine.rs  game.rs  generate  main.rs  new  notes  response  scratch  seven_reminder.san  show  solve  sproingy_2025-05-19_00-02-02.san  sproingy_2025-05-19_00-03-32.san  sproingy_2025-05-19_00-05-49.san  sproingy_2025-05-19_00-25-41.san  todo
analyses/: 2023-03-03.san  2023-03-04.san  2023-03-05.san  2023-03-07.san  2023-03-13.san  2023-03-15-lnd.san  2023-03-15.san  2023-03-21.san  2023-03-21_2.san  2023-03-23.san  2023-03-30.san  2023-04-01.san  2023-04-07.san  2023-04-16.san  2023-04-18.san  2023-04-23-observed.san  2023-04-23.san  2023-04-27.san  2023-04-28.san  2023-05-05.san  2023-05-07  2023-05-08.san  2023-05-21.san  2023-05-24.san  2023-06-01-b.san  2023-06-01.san  2023-06-03-b.san  2023-06-03.san  2023-06-05.san  2023-06-10.san  2023-06-18  2023-07-18.san  2023-07-20.san  2023-07-23.san  2023-07-26.san  33.san  4x2.san  Jia_board.san  bigger.san  blah.san  (+43 more)
four more boards/large_square/: board_back.png~
four more boards/medium_square/: board_back.png~
four more boards/small_square/: aimove.kra  aimove.kra~
src/: analyzer.rs  auto_layout.rs  boards.rs  engine.rs  gametree.rs  interactive.rs  main.rs  slate.rs  solve.rs  svg.rs  web.rs
src/lib/: boards.rs  engine.rs  gametree.rs  layout.rs  lib.rs  san.rs
