[package]
name = "stones"
version = "0.1.0"
edition = "2021"
default-run = "auto_layout"

[lib]
name = "stones"
path = "src/lib/lib.rs"

[[bin]]
name = "stones_analyzer"
path = "src/analyzer.rs"

[[bin]]
name = "stones_svg"
path = "src/svg.rs"

[[bin]]
name = "stones_solver"
path = "src/solve.rs"

[[bin]]
name = "slate"
path = "src/slate.rs"

[[bin]]
name = "auto_layout"
path = "src/auto_layout.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sfml = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
clap = { version = "4.1.8", features = ["derive"] }
actix-web = "4"
indoc = "2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rand = "0.8.5"
chrono = "0.4.38"
